docs/api/qiskit/0.35/qiskit.transpiler.passes.CollectLinearFunctions.mdx
---
title: CollectLinearFunctions (v0.35)
description: API reference for qiskit.transpiler.passes.CollectLinearFunctions in qiskit v0.35
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.CollectLinearFunctions
---

# CollectLinearFunctions

<Class id="qiskit.transpiler.passes.CollectLinearFunctions" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.20/qiskit/transpiler/passes/optimization/collect_linear_functions.py" signature="CollectLinearFunctions(*args, **kwargs)" modifiers="class">
  Bases: `qiskit.transpiler.basepasses.TransformationPass`

  Collect blocks of linear gates ([`CXGate`](qiskit.circuit.library.CXGate "qiskit.circuit.library.CXGate") and [`SwapGate`](qiskit.circuit.library.SwapGate "qiskit.circuit.library.SwapGate") gates) and replaces them by linear functions ([`LinearFunction`](qiskit.circuit.library.LinearFunction "qiskit.circuit.library.LinearFunction")).

  ## Methods

  <span id="qiskit-transpiler-passes-collectlinearfunctions-name" />

  ### name

  <Function id="qiskit.transpiler.passes.CollectLinearFunctions.name" signature="CollectLinearFunctions.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-collectlinearfunctions-run" />

  ### run

  <Function id="qiskit.transpiler.passes.CollectLinearFunctions.run" signature="CollectLinearFunctions.run(dag)">
    Run the CollectLinearFunctions pass on dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – the DAG to be optimized.

    **Returns**

    the optimized DAG.

    **Return type**

    [DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.CollectLinearFunctions.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.CollectLinearFunctions.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

